--- a/css/main.css
+++ b/css/main.css
@@ -337,30 +337,35 @@
     text-align: center;
  }
  .ourport {
-    background-color: #f5f9fc;
     padding: 30px 0px;
  }
  
  .portheader {
     text-align: center;
     padding-bottom: 10px;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
  
  }
  
  .portheader h2 {
-    font-size: 32px;
-    font-weight: 200;
-    font-family: "Raleway", sans-seri;
+    font-family: "Raleway", sans-serif;   
+    font-size: 20px;
+    font-weight: 300;
+    font-weight: bold;
+    text-transform: uppercase;
     margin-bottom: 20px;
-    color: #5c768d;
- }
+    padding-bottom: 0;
+    color: #5c9f24;
+}
+ 
  .portheader p{
-    font-size: 14px;
-    font-family: "Open Sans", sans-serif;
-    color: #444;
+    font-size: 11px;
+    font-weight: 400;
+    box-sizing: border-box;
     margin-bottom: 15px;
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
  }
  
  .but {
@@ -379,7 +384,7 @@
  }
  
  .but button:hover {
-    background-color: rgb(13, 139, 241);
+    background-color: #5fb11d;
     transition: all 0.2s ease;
  }
  
@@ -443,7 +448,8 @@
  }
  
  .portinfo {
-    transform: translateY(-20px);
+   margin-top: 40%;
+   margin-right:70% ;
     opacity: 0;
     transition: all 0.5s ease;
  }
@@ -455,7 +461,7 @@
  
  .portinfo h5 {
     color: #fff;
-    font-size: 20px;
+    font-size: 13px;
     text-align: center;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -464,7 +470,7 @@
  
  .portinfo h6 {
     color: #fff;
-    font-size: 20px;
+    font-size: 12px;
     text-align: center;
     margin-bottom: 2px;
     margin-bottom: 10px;
@@ -478,14 +484,14 @@
  
  .portico a {
     display: block;
-    width: 25px;
-    height: 25px;
+    width: 15px;
+    height: 15px;
     background-color: #fff;
     color: rgba(10, 173, 238, 0.966);
     border-radius: 100%;
     text-align: center;
     text-decoration: none;
-    line-height: 25px;
+    line-height: 20px;
     margin: 0 5px;
     font-size: 11px;
     font-weight: 100;
